# climeta

./: Cargo.toml  LICENSE-MIT  README.md  azure-pipelines-template.yml  azure-pipelines.yml  rustfmt.toml
examples/: test.rs  winrt.rs
src/: core.rs  database.rs  lib.rs  schema.rs  table.rs
src/core/: columns.rs  db.rs  pe.rs  table.rs
src/schema/: custom_attributes.rs  flags.rs  rows.rs  signatures.rs
src/schema/flags/: assembly_attributes.rs  event_attributes.rs  field_attributes.rs  generic_param_attributes.rs  method_attributes.rs  method_impl_attributes.rs  method_semantics_attributes.rs  param_attributes.rs  property_attributes.rs  type_attributes.rs
