[package]
name = "climeta"
version = "0.1.0"
authors = ["Patrick Reisert"]
description = "ECMA-335 CLI metadata reading library"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Boddlnagg/climeta"
homepage = "https://github.com/Boddlnagg/climeta"
edition = "2018"

[dependencies]
memmap = "0.7"
byteorder = "1.3"
num-traits = "0.2"
num-derive = "0.2"
stable_deref_trait = "1.1.1"
elsa = "1.1.0"
owning_ref = "0.4.0"
